--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,10 @@
     </div>
     <div id="noticias-container" class="row g-4"></div>
   </div>
-
-  <script src="assets/scripts/app.js"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <h2 class="d-flex justify-content-center">Notícias por Categoria</h2>
+  <div class="d-flex justify-content-center my-4">
+  <canvas id="graficoCategorias" width="500" height="500"></canvas>
+</div>
   <footer class="bg-dark text-white text-center py-4 mt-5">
     <div class="container">
       <p class="mb-1">Daniel Rangel Aguiar</p>
@@ -41,5 +41,10 @@
       <p class="mb-0">Data: 22/04/2025</p>
     </div>
   </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="assets/scripts/app.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 </body>
 </html>
